--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "avondale-event-indexer",
   "version": "1.0.0",
   "description": "Consolidate event data from Avondale businesses and community groups.",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
