--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "npx tsx index.js"
   },
   "author": "Sean MacMullan",
   "license": "ISC",
@@ -15,6 +16,11 @@
     "googleapis": "^144.0.0",
     "ical": "^0.8.0",
     "markdown-it": "^14.1.0",
-    "puppeteer": "^23.5.0"
+    "puppeteer": "^23.5.0",
+    "rrule": "^2.8.1"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   }
 }
