--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rrule": "^2.8.1"
   },
   "devDependencies": {
+    "@types/ical": "^0.8.3",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
