--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/ical": "^0.8.3",
+    "@types/markdown-it": "^14.1.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
