--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Consolidate event data from Avondale businesses and community groups.",
   "type": "module",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "npx tsx index.js"
+    "start": "node index.ts"
   },
   "author": "Sean MacMullan",
   "license": "ISC",
@@ -22,7 +22,6 @@
   "devDependencies": {
     "@types/ical": "^0.8.3",
     "@types/markdown-it": "^14.1.2",
-    "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
 }
