--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "noEmit": true, // Optional - see note below
+    "target": "esnext",
     "module": "nodenext",
-    "outDir": "./build",
-    // "incremental": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "allowJs": true,
+    "rewriteRelativeImportExtensions": true,
+    "erasableSyntaxOnly": true,
+    "verbatimModuleSyntax": true,
+    "allowJs": true
   },
   "include": [
     "src/**/*.*", 
